--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundles/tcomment_vim"]
 	path = bundles/tcomment_vim
 	url = https://github.com/tomtom/tcomment_vim.git
+[submodule "bundles/vim-colors-solarized"]
+	path = bundles/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
