--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundles/vim-colors-solarized"]
 	path = bundles/vim-colors-solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "bundles/open-browser.vim"]
+	path = bundles/open-browser.vim
+	url = https://github.com/tyru/open-browser.vim.git
