Switched from Pathogen to Vundle.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,54 +1,3 @@
-[submodule "bundles/argtextobj.vim"]
-	path = bundles/argtextobj.vim
-	url = https://github.com/vim-scripts/argtextobj.vim.git
-[submodule "bundles/camelcasemotion"]
-	path = bundles/camelcasemotion
-	url = https://github.com/vim-scripts/camelcasemotion.git
-	ignore = untracked
-[submodule "bundles/DetectIndent"]
-	path = bundles/DetectIndent
-	url = https://github.com/vim-scripts/DetectIndent.git
-	ignore = untracked
-[submodule "bundles/vim-blackboard"]
-	path = bundles/vim-blackboard
-	url = https://github.com/nelstrom/vim-blackboard.git
-[submodule "bundles/vim-surround"]
-	path = bundles/vim-surround
-	url = https://github.com/tpope/vim-surround.git
-	ignore = untracked
-[submodule "bundles/vim-unimpaired"]
-	path = bundles/vim-unimpaired
-	url = https://github.com/tpope/vim-unimpaired.git
-	ignore = untracked
-[submodule "bundles/delimitMate"]
-	path = bundles/delimitMate
-	url = https://github.com/Raimondi/delimitMate.git
-[submodule "bundles/nerdtree"]
-	path = bundles/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
-[submodule "bundles/matchit"]
-	path = bundles/matchit
-	url = https://github.com/vim-scripts/matchit.zip.git
-	ignore = untracked
-[submodule "bundles/supertab"]
-	path = bundles/supertab
-	url = https://github.com/ervandew/supertab.git
-[submodule "bundles/snipmate"]
-	path = bundles/snipmate
-	url = https://github.com/msanders/snipmate.vim.git
-	ignore = untracked
-[submodule "bundles/vim-makegreen"]
-	path = bundles/vim-makegreen
-	url = https://github.com/reinh/vim-makegreen.git
-[submodule "bundles/tcomment_vim"]
-	path = bundles/tcomment_vim
-	url = https://github.com/tomtom/tcomment_vim.git
-[submodule "bundles/vim-colors-solarized"]
-	path = bundles/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
-[submodule "bundles/open-browser.vim"]
-	path = bundles/open-browser.vim
-	url = https://github.com/tyru/open-browser.vim.git
-[submodule "bundles/vim-fugitive"]
-	path = bundles/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
+[submodule "vundle"]
+	path = vundle
+	url = https://github.com/gmarik/vundle.git
